@@ -1,4 +1,5 @@
 HEAD
+	+ Flush cache when regenerating routes
 	+ Bug fix: use '>='  and not '>' to check if a test exceeds $maxRatio
 	  in Failover watcher
 	+ Bug fix: do not run failover probes when all are disabled because
